# glEngine-deprecated

./: CMakeLists.txt  README.md  main.cpp
Core/: App.cpp  App.h  AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  Window.cpp  Window.h
Shader/: frag.glsl  vertex.glsl
